# ai-ml-portfolio

./: README.md
bookstore-information-architecture/: README.md
bookstore-information-architecture/main/: 个人中心.html  书籍详情页.html  发帖页面.html  售书通道.html  图书漂流.html  图书漂流捐书页.html  图书漂流领取页.html  帖子详情.html  帮助页面.html  登录系统.html  系统设置.html  订单管理.html  论坛.html  购书通道.html  首页.html
bookstore-information-architecture/templates 2 2/: 个人中心.html  书籍详情页.html  发帖页面.html  售书通道.html  图书漂流.html  图书漂流捐书页.html  图书漂流领取页.html  帖子详情.html  帮助页面.html  登录系统.html  系统设置.html  订单管理.html  论坛.html  购书通道.html  首页.html
bookstore-information-architecture/初步设计/: 初步设计.docx  页面设计-文字说明.docx
data-structures-algorithms/: README.md  count.py
data-structures-algorithms/1/: date.py  guess.py  merge_sort.py
data-structures-algorithms/2400094622-努尔斯/: main.py
data-structures-algorithms/作业1/: 1.py  10.py  2.py  3.py  4.py  4_1.py  4_2.py  5.py  6.py  7.py  7_1.py  8.py  8_1.py  9.py
data-structures-algorithms/作业3/: main.py  test.py  (+4 more)
dino-game-js/: README.md  cactus.js  canvas.js  game.js  index.html
information-retrieval-system/: README.md
quantitative-analysis-cfps/: README.md  homework3.py  homework_analysis.py
sam-interactive-image-editor/: README.md  pyproject.toml
sam-interactive-image-editor/frontend/: index.html  main.js  styles.css
sam-interactive-image-editor/src/image_process_backend/: __init__.py  cli.py  image_ops.py  mask_refine.py  sam_service.py  server.py
stock-sentiment-prediction/: README.md
vit-classifier-from-scratch/: README.md
warehouse-drone-simulation/: README.md
(+34 files in other folders)
